fix: Ensure main content of home, search and explore page is fully visible below fixed MusicPlayer component
ui: Change 'container' selector on index.css to 'layout'

--- a/frontend/src/components/musicPlayer/musicPlayer.css
+++ b/frontend/src/components/musicPlayer/musicPlayer.css
@@ -4,7 +4,7 @@
   align-items: center;
   background-color: var(--darker-bg);
   width: 100%;
-  height: 90px;
+  height: 75px;
   z-index: 200;
   position: fixed;
   bottom: 0;
