--- a/frontend/src/components/rightbar/rightbar.css
+++ b/frontend/src/components/rightbar/rightbar.css
@@ -2,4 +2,5 @@
   position: fixed;
   width: 375px;
   right: 20px;
+  height: 100%;
 }
