--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -66,7 +66,7 @@ body {
   height: 100vh;
 }
 
-.container {
+.layout {
   width: 100%;
   box-sizing: border-box;
   background: var(--darker-bg);
