--- a/frontend/src/pages/explore/explore.css
+++ b/frontend/src/pages/explore/explore.css
@@ -1,6 +1,7 @@
 .explore {
   height: 100%;
   overflow: hidden;
+  padding-bottom: 75px;
 }
 
 .explore .exploreChild {
